[package]
name = "vpl-relying-party-cli"
version = "0.1.1"
description = "VPL Relying Party Command-line Utility"
authors = ["Velas <info@velas.com>", "Vlad Pavlichek <vlader112@gmail.com>"]
repository = "https://github.com/velas/velas-program-library"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
borsh = "0.9.0"
clap = "2.33.3"
cid = "0.7.0"
multihash = "0.10"
solana-clap-utils = "1.7.4"
solana-cli-config = { git = "https://github.com/velas/velas-chain/", package = "solana-cli-config", version = "1.6.14" }
solana-client = "1.7.4"
solana-logger = "1.7.4"
solana-sdk = "1.7.4"
vpl-relying-party = { version = "0.1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "vpl-relying-party"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
