[package]
name = "vpl-relying-party"
version = "0.1.0"
description = "Velas Program Library Relying-Party"
authors = ["Velas <info@velas.com>", "Vlad Pavlichek <vlader112@gmail.com>"]
repository = "https://github.com/velas/velas-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
cid = "0.7.0"
multihash = "0.10"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.7"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
